force-app/main/default/objects/Product_Information__c/Product_Information__c.object-meta.xml
<CustomObject>
    <label>Product Information</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>