force-app/main/default/objects/Product_Information__c/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <label>Card Replacement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>